Remove prj-service-log, prj-service-rest, prj-service-ai modules
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>